--- a/nflsite/templates/account.jinja
+++ b/nflsite/templates/account.jinja
@@ -1,4 +1,4 @@
-{% extends "layout.html" %} {% block content %}
+{% extends "layout.jinja" %} {% block content %}
 <div class="content-section">
     <div class="media">
         <img class="rounded-circle account-img" src="{{ image_file }}">
