--- a/nflsite/static/main.css
+++ b/nflsite/static/main.css
@@ -83,3 +83,35 @@ a.article-title:hover {
 .account-heading {
     font-size: 2.5rem;
 }
+
+* {
+    box-sizing: border-box;
+}
+
+.picks-wrapper {
+    padding: 0px 0px !important;
+}
+
+.picks-game {
+    background: none!important;
+    border: none!important;
+}
+
+.picks-game-heading {
+    text-align: left;
+    padding-bottom: 5px;
+}
+
+.picks-team {
+    border: #c2c2c2 3px solid!important;
+}
+
+.picks-team.active {
+    background-color: #ebf1ff!important;
+    border: #226fe0 3px solid!important;
+    color: #212529!important;
+}
+
+.picks-team-record {
+    margin-bottom: 0px;
+}
