--- a/nflsite/templates/login.jinja
+++ b/nflsite/templates/login.jinja
@@ -1,17 +1,9 @@
-{% extends "layout.html" %} {% block content %}
+{% extends "layout.jinja" %} {% block content %}
 <div class="content-section">
     <form method="POST" action="">
         {{ form.hidden_tag() }}
         <fieldset class="form-group">
-            <legend class="border-bottom mb-4">Join Today</legend>
-            <div class="form-group">
-                {{ form.username.label(class="form-control-label") }} {% if form.username.errors %} {{ form.username(class="form-control form-control-lg is-invalid") }}
-                <div class="invalid-feedback">
-                    {% for error in form.username.errors %}
-                    <span>{{ error }}</span> {% endfor %}
-                </div>
-                {% else %} {{ form.username(class="form-control form-control-lg") }} {% endif %}
-            </div>
+            <legend class="border-bottom mb-4">Log In</legend>
             <div class="form-group">
                 {{ form.email.label(class="form-control-label") }} {% if form.email.errors %} {{ form.email(class="form-control form-control-lg is-invalid") }}
                 <div class="invalid-feedback">
@@ -28,23 +20,21 @@
                 </div>
                 {% else %} {{ form.password(class="form-control form-control-lg") }} {% endif %}
             </div>
-            <div class="form-group">
-                {{ form.confirm_password.label(class="form-control-label") }} {% if form.confirm_password.errors %} {{ form.confirm_password(class="form-control form-control-lg is-invalid") }}
-                <div class="invalid-feedback">
-                    {% for error in form.confirm_password.errors %}
-                    <span>{{ error }}</span> {% endfor %}
-                </div>
-                {% else %} {{ form.confirm_password(class="form-control form-control-lg") }} {% endif %}
+            <div class="form-check">
+                {{ form.remember(class="form-check-input") }} {{ form.remember.label(class="form-check-label") }}
             </div>
         </fieldset>
         <div class="form-group">
             {{ form.submit(class="btn btn-outline-info") }}
         </div>
+        <small class="text-muted ml-2">
+                <a href="#">Forgot Password?</a>
+            </small>
     </form>
 </div>
 <div class="border-top pt-3">
     <small class="text-muted">
-            Already Have An Account? <a class="ml-2" href="{{ url_for('login') }}">Sign In</a>
+            Need An Account? <a class="ml-2" href="{{ url_for('register') }}">Sign Up Now</a>
         </small>
 </div>
 {% endblock content %}
