--- a/nflsite/templates/picks.jinja
+++ b/nflsite/templates/picks.jinja
@@ -1,40 +1,72 @@
-{% extends "layout.html" %} {% block content %}
+{% extends "layout.jinja" %} {% block content %}
+
 <h1>Picks Page</h1>
 <h2>{{ matches['season'].year}} - {{ matches['season'].week }}</h2>
 <form method="POST" action="">
     {% for match in matches['data'] %}
-    <div>
-        <h4> Game {{ loop.index }}</h4>
 
-            <img src="{{ url_for('static', filename=match.team1_image) }}" width="50" height="50">
-            {% if match.user_pick %} 
-                {% if match.user_pick == match.team1_id %}
-                <label>
-                    <input type="radio" name="matchid_{{ match.match_id }}" value="{{ match.team1_id }}" checked> {{ match.team1_name }}
-                </label>
-                <label>
-                    <input type="radio" name="matchid_{{ match.match_id }}" value="{{ match.team2_id }}"> {{ match.team2_name }} 
-                </label>
-                {% else %}
-                <label>
-                    <input type="radio" name="matchid_{{ match.match_id }}" value="{{ match.team1_id }}"> {{ match.team1_name }}
-                </label>
-                <label>
-                    <input type="radio" name="matchid_{{ match.match_id }}" value="{{ match.team2_id }}" checked> {{ match.team2_name }} 
-                </label>
-                {% endif %} 
-            {% else %}
-            <label>
-                <input type="radio" name="matchid_{{ match.match_id }}" value="{{ match.team1_id }}"> {{ match.team1_name }}
-            </label>
-            <label>
-                <input type="radio" name="matchid_{{ match.match_id }}" value="{{ match.team2_id }}"> {{ match.team2_name }} 
-            </label>
-            {% endif %}
-            <img src="{{ url_for('static', filename=match.team2_image) }}" width="50" height="50">
+        <div class="picks-wrapper col text-center">
+            <div class="picks-game alert alert-secondary" role="alert">
+                <h6 class="picks-game-heading alert-heading">{{ match.match_date.strftime('%I:%M %p, %a, %B %d, %Y') }}</h6>
+                <div class="picks-teams row btn-group btn-group-toggle" data-toggle="buttons">
+                    <div class="col">
+                        {# if game has already started, disable buttons but show who they picked if they did pick someone #}
+                        {% if now_date > match.match_date %}
+                            {% if match.user_pick and match.user_pick == match.team1_id %}
+                                <label class="picks-team btn btn-outline-dark btn-lg btn-block active">
+                                <input type="radio" style="display: none;" name="matchid_{{ match.match_id }}" value="{{ match.team1_id }}" autocomplete="off" disabled> {{ match.team1_name}}
+                            {% else %}
+                                <label class="picks-team btn btn-outline-dark btn-lg btn-block disabled">
+                                <input type="radio" style="display: none;" name="matchid_{{ match.match_id }}" value="{{ match.team1_id }}" autocomplete="off" disabled> {{ match.team1_name}}
+                            {% endif %}
 
-    </div>
+                        {% else %}
+                            {% if match.user_pick and match.user_pick == match.team1_id %}
+                                <label class="picks-team btn btn-outline-dark btn-lg btn-block active">
+                                <input type="radio" style="display: none;" name="matchid_{{ match.match_id }}" value="{{ match.team1_id }}" autocomplete="off"> {{ match.team1_name}}
+                            {% else %}
+                                <label class="picks-team btn btn-outline-dark btn-lg btn-block">
+                                <input type="radio" style="display: none;" name="matchid_{{ match.match_id }}" value="{{ match.team1_id }}" autocomplete="off"> {{ match.team1_name}}
+                            {% endif %}
+                        {% endif %}
+                            <img class="rounded-circle w-25" src="{{ url_for('static', filename=match.team1_image) }}">
+                        </label>
+                        <p class="picks-team-record">{{ match.team1_record }}</p>
+                    </div>
+                    <div class="col-md-.25 d-flex align-items-center justify-content-center padding-bottom:5px">
+                        <p>
+                        <strong>@</strong>
+                        </p>
+                    </div>
+                    <div class="col">
+                        {% if now_date > match.match_date %}
+                            {% if match.user_pick and match.user_pick == match.team2_id %}
+                                <label class="picks-team btn btn-outline-dark btn-lg btn-block active">
+                                <input type="radio" style="display: none;" name="matchid_{{ match.match_id }}" value="{{ match.team2_id }}" autocomplete="off" disabled> {{ match.team2_name}}
+                            {% else %}
+                                <label class="picks-team btn btn-outline-dark btn-lg btn-block disabled">
+                                <input type="radio" style="display: none;" name="matchid_{{ match.match_id }}" value="{{ match.team2_id }}" autocomplete="off" disabled> {{ match.team2_name}}
+                            {% endif %}
+
+                        {% else %}
+                            {% if match.user_pick and match.user_pick == match.team2_id %}
+                                <label class="picks-team btn btn-outline-dark btn-lg btn-block active">
+                                <input type="radio" style="display: none;" name="matchid_{{ match.match_id }}" value="{{ match.team2_id }}" autocomplete="off"> {{ match.team2_name}}
+                            {% else %}
+                                <label class="picks-team btn btn-outline-dark btn-lg btn-block">
+                                <input type="radio" style="display: none;" name="matchid_{{ match.match_id }}" value="{{ match.team2_id }}" autocomplete="off"> {{ match.team2_name}}
+                            {% endif %}
+                        {% endif %}
+                            <img class="rounded-circle w-25" src="{{ url_for('static', filename=match.team2_image) }}">
+                        </label>
+                        <p class="picks-team-record">{{ match.team2_record }}</p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
     {% endfor %}
-    <input type="submit">
+    <input class="btn btn-primary btn-block" type="submit">
 </form>
+
 {% endblock content %}
